--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </div>
         <div id="result"></div>
     </div>
-    <footer>©2025 Mentrum all rights reserved</footer>
+    <footer>©2025 &copy;Shami&Co all rights reserved</footer>
 
     <script>
     document.getElementById("convert-btn").addEventListener("click", () => {
